--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
+    "photoswipe": "^5.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-responsive": "^10.0.1",
     "react-router": "^7.8.2",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
